[package]
name = "ant-rs"
description = "Another Network Tunnel; A simple program for local/remote port forwarding over a SSH tunnel."
version = "0.1.6-pre"
edition = "2021"
authors = ["Hendrik Böck <hendrikboeck.dev@protonmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/hendrikboeck/ant-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2"
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
exitcode = "1"
directories = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
ctrlc = "3"
once_cell = "1"
which = "4"

[package.metadata.deb]
assets = [
  [
    "target/release/ant-rs",
    "usr/bin/ant-rs",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/ant-rs/README",
    "644",
  ],
  [
    "res/ant-rs.man",
    "usr/share/man/man8/ant-rs.8",
    "644",
  ],
]
maintainer = "Hendrik Böck <hendrikboeck.dev@protonmail.com>"
copyright = "2023, Hendrik Böck <hendrikboeck.dev@protonmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ant-rs", dest = "/usr/bin/ant-rs", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/ant-rs/README", mode = "644" },
  { source = "res/ant-rs.man", dest = "/usr/share/man/man8/ant-rs.8", mode = "644" },
]
license = "GPL-3.0-or-later"
auto-req = "auto"
